--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
             <div class="personagem-jogador-1 personagem-grande">
                 <img src="./Source/Imagens/thor.png" alt="Personagem selecionado player1" id="personagem-jogador-1">
                 <div class="nome">
-                    <h2>Thor</h2>
+                    <h2 id="personagem-selecionado">Thor</h2>
                 </div>
             </div>
 
@@ -82,5 +82,6 @@
             </div>
         </div>
     </main>
+    <script src="./Estrutura primaria/src/js/index.js"></script>
 </body>
 </html>
