--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <header class="cabecalho">
-            <h1 class="titulo">Character Selection</h1>
+            <h1 class="titulo">Character Selection 2</h1>
         </header>
         <div class="selecao-de-personagens">
             <div class="personagem-jogador-1 personagem-grande">
